[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kernels>=0.13.0",
    "numpy>=2.4.4",
    "nvidia-ml-py>=13.595.45",
    "pyarrow>=24.0.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "wandb>=0.26.1",
]
